# submodTest

./: .gitignore  .gitmodules  CMakeLists.txt  gmon.out  main.cpp  pdfParser.cbp  pdfParser.depend  pdfParser.layout  readme.md
encoding/: adobe-glyph-list.h  mac-expert-encoding.h  mac-roman-encoding.h  standard-encoding.h  symbol-encoding.h  win-ansi-encoding.h
include/: CmdHandler.h  InsertLink.h  ParsedPDFData.h  RetainMemory.h  SaveText.h  pdfParser.h
parsing/: collection-state.cpp  collection-state.h  font-decoding.cpp  font-decoding.h  multi-dict-helper.cpp  multi-dict-helper.h  pdf-interpreter.cpp  pdf-interpreter.h  placements-extraction.cpp  placements-extraction.h  standard-fonts-dimensions.h  transformations.h
src/: CmdHandler.cpp  InsertLink.cpp  RetainMemory.cpp  SaveText.cpp  pdfParser.cpp
test/: BasicModification.cpp  BasicModification.h
